Overflow corrections

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,6 +5,9 @@
   color: #fff;
   margin: 40px auto 51px;
   align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .profile__image {
@@ -19,12 +22,10 @@
   grid-template-columns: max-content;
   grid-template-areas: "title button" "subtitle subtitle";
   grid-gap: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .profile__title {
+  max-width: 373px;
   margin: 0 0 0 3.75px;
   font-family: "Inter", sans-serif;
   font-size: 42px;
@@ -33,9 +34,13 @@
   letter-spacing: 0em;
   text-align: left;
   grid-area: title;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .profile__subtitle {
+  max-width: 415px;
   margin: 16px 0 0 3.75px;
   padding: 0;
   align-self: flex-end;
@@ -46,6 +51,9 @@
   letter-spacing: 0em;
   text-align: left;
   grid-area: subtitle;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .profile__buttons {
@@ -105,12 +113,17 @@
   }
 
   .profile__paragraph {
-    max-width: max-content;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .profile__subtitle {
     justify-self: center;
     margin-bottom: 36px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
@@ -124,6 +137,7 @@
     justify-self: center;
   }
   .profile__title {
+    max-width: 196px;
     font-size: 22px;
     line-height: 1.2;
     text-align: center;
@@ -132,6 +146,7 @@
   }
 
   .profile__subtitle {
+    max-width: 282px;
     font-family: "Inter", sans-serif;
     font-size: 14px;
     line-height: 1.2;
